  cargo-features = ["edition"]

  [package]
  name    = "pursue"
  version = "0.0.1"
  description = "A simple, fast and clean command line prompt"
  authors = ["Kurt B. <kurt.bonatz@gmail.com>"]
  edition = "2018"

  [dependencies]
  ansi_term = "0.7.4"
  clap      = {version = "2.31.2", features = ["yaml"]}
  dirs      = "1.0.2"
  git2      = "0.7.1"
  regex     = "1.0.1"
  tico      = "1.0.0"

  [dev-dependencies]
  tempdir = "0.3"

  [profile.release]
  opt-level        = 3
  debug            = false
  rpath            = false
  lto              = false
  debug-assertions = false
  codegen-units    = 1

  [profile.dev]
  opt-level        = 0
  debug            = true
  rpath            = false
  lto              = false
  debug-assertions = true
  codegen-units    = 4
